--- a/src/Views/MenuAdministrador.fxml
+++ b/src/Views/MenuAdministrador.fxml
@@ -19,14 +19,14 @@
          <children>
             <AnchorPane prefHeight="400.0" prefWidth="600.0">
                <children>
-                  <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="MENU ADMINISTRADOR" textFill="#1e54e1" AnchorPane.leftAnchor="75.0">
+                  <Label contentDisplay="CENTER" layoutX="75.0" prefHeight="35.0" prefWidth="365.0" style="-fx-background-color: rgba(173, 188, 242, 1); -fx-font-weight: bold;" text="MENU ADMINISTRADOR" AnchorPane.leftAnchor="75.0">
                      <opaqueInsets>
                         <Insets bottom="10.0" />
                      </opaqueInsets>
                   </Label>
                   <AnchorPane layoutY="35.0" prefHeight="365.0" prefWidth="600.0" style="-fx-background-color: rgba(229, 234, 250);">
                      <children>
-                        <TextField fx:id="busca_admin" layoutX="18.0" layoutY="126.0" prefHeight="30.0" prefWidth="466.0" promptText="Buscar produto por ID ou nome" style="-fx-background-radius: 20;" />
+                        <TextField fx:id="busca_admin" layoutX="15.0" layoutY="126.0" prefHeight="30.0" prefWidth="466.0" promptText="Buscar produto por ID ou nome" style="-fx-background-radius: 20;" />
                         <Button fx:id="buscarVendasButton" layoutX="9.0" layoutY="19.0" mnemonicParsing="false" onAction="#buscar_vendas_onAction" prefHeight="35.0" prefWidth="98.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Buscar Vendas" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
@@ -52,18 +52,18 @@
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <Button fx:id="pesquisar_admin" layoutX="494.0" layoutY="126.0" mnemonicParsing="false" onAction="#pesquisar_onAction" prefHeight="30.0" prefWidth="88.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Pesquisar" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
+                        <Button fx:id="pesquisar_admin" layoutX="497.0" layoutY="126.0" mnemonicParsing="false" onAction="#pesquisar_onAction" prefHeight="30.0" prefWidth="88.0" style="-fx-background-color: rgba(58, 128, 226, 1); -fx-background-radius: 20;" text="Pesquisar" textAlignment="CENTER" textFill="WHITE" textOverrun="WORD_ELLIPSIS" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                         </Button>
-                        <RadioButton fx:id="rb_id" layoutX="54.0" layoutY="84.0" mnemonicParsing="false" selected="true" text="ID">
+                        <RadioButton fx:id="rb_id" layoutX="39.0" layoutY="84.0" mnemonicParsing="false" selected="true" text="ID">
                            <toggleGroup>
                               <ToggleGroup fx:id="selecao_pesquisa" />
                            </toggleGroup>
                         </RadioButton>
                         <RadioButton fx:id="rb_nome" layoutX="122.0" layoutY="84.0" mnemonicParsing="false" text="Nome" toggleGroup="$selecao_pesquisa" />
-                        <Label fx:id="label_aviso" layoutX="195.0" layoutY="72.0" prefHeight="17.0" prefWidth="358.0" textFill="RED" />
+                        <Label fx:id="label_aviso" layoutX="48.0" layoutY="166.0" prefHeight="17.0" prefWidth="358.0" textFill="RED" />
                      </children>
                   </AnchorPane>
                   <MenuBar layoutX="-4.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
