--- a/src/Views/PerfilVendedorAdmin.fxml
+++ b/src/Views/PerfilVendedorAdmin.fxml
@@ -24,7 +24,7 @@
                <children>
                   <AnchorPane cacheShape="false" focusTraversable="true" layoutX="50.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgb(173, 188, 242, 1); -fx-background-radius: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                      <children>
-                        <TextField fx:id="idEnter" layoutX="72.0" layoutY="26.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="idEnter" editable="false" layoutX="72.0" layoutY="26.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <Label layoutX="45.0" layoutY="30.0" style="-fx-font-weight: bold;" text="ID:" />
                         <Label layoutX="21.0" layoutY="72.0" style="-fx-font-weight: bold;" text="Nome:" />
                         <Label layoutX="8.0" layoutY="115.0" style="-fx-font-weight: bold;" text="Vendas:" />
