--- a/src/Views/PerfilVendedorAdmin.fxml
+++ b/src/Views/PerfilVendedorAdmin.fxml
@@ -33,7 +33,7 @@
                         <Button fx:id="removerVendedorButton" layoutX="45.0" layoutY="244.0" mnemonicParsing="false" onAction="#remover_vendedor_onAction" prefHeight="30.0" prefWidth="170.0" style="-fx-background-radius: 10; -fx-background-color: rgba(244, 93, 83, 1); -fx-font-weight: bold;" text="Remover vendedor" textFill="WHITE" />
                         <TextField fx:id="nomeEnter" layoutX="72.0" layoutY="68.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <TextField fx:id="emailEnter" layoutX="72.0" layoutY="157.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
-                        <TextField fx:id="vendasEnter" layoutX="72.0" layoutY="111.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
+                        <TextField fx:id="vendasEnter" editable="false" layoutX="72.0" layoutY="111.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <TextField fx:id="senhaEnter" layoutX="72.0" layoutY="203.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <Button fx:id="atualizarDadosButton" layoutX="45.0" layoutY="282.0" mnemonicParsing="false" onAction="#atualizar_dados_onAction" prefHeight="30.0" prefWidth="170.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Atualizar Dados" textFill="WHITE" />
                      </children>
