--- a/src/Views/PerfilVendedorAdmin.fxml
+++ b/src/Views/PerfilVendedorAdmin.fxml
@@ -36,6 +36,9 @@
                         <TextField fx:id="vendasEnter" editable="false" layoutX="72.0" layoutY="111.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <TextField fx:id="senhaEnter" layoutX="72.0" layoutY="203.0" prefHeight="25.0" prefWidth="145.0" style="-fx-background-radius: 15;" />
                         <Button fx:id="atualizarDadosButton" layoutX="45.0" layoutY="282.0" mnemonicParsing="false" onAction="#atualizar_dados_onAction" prefHeight="30.0" prefWidth="170.0" style="-fx-background-radius: 10; -fx-background-color: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Atualizar Dados" textFill="WHITE" />
+                        <Label fx:id="LabelAvisoNome" layoutX="60.0" layoutY="93.0" prefHeight="17.0" prefWidth="170.0" />
+                        <Label fx:id="LabelAvisoEmail" layoutX="57.0" layoutY="182.0" prefHeight="17.0" prefWidth="170.0" />
+                        <Label fx:id="labelAvisoBranco" layoutX="57.0" layoutY="6.0" prefHeight="17.0" prefWidth="170.0" />
                      </children>
                   </AnchorPane>
                </children>
