--- a/src/Views/BuscarVendasAdmin.fxml
+++ b/src/Views/BuscarVendasAdmin.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -16,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.BuscarVendasAdminController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.BuscarVendasAdminController">
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -39,8 +44,8 @@
                               <ToggleGroup fx:id="pesquisa" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton layoutX="80.0" layoutY="32.0" mnemonicParsing="false" text="Data do Pedido" toggleGroup="$pesquisa" />
-                        <RadioButton layoutX="226.0" layoutY="32.0" mnemonicParsing="false" text="Horário do Pedido" toggleGroup="$pesquisa" />
+                        <RadioButton layoutX="80.0" layoutY="32.0" mnemonicParsing="false" text="Nome do Vendedor" toggleGroup="$pesquisa" />
+                        <RadioButton layoutX="241.0" layoutY="32.0" mnemonicParsing="false" text="Data do Pedido" toggleGroup="$pesquisa" />
                         <Label contentDisplay="CENTER" layoutX="18.0" layoutY="-3.0" prefHeight="35.0" prefWidth="175.0" style="-fx-font-weight: bold;" text="Pesquisar vendas por:" textFill="#051028">
                            <opaqueInsets>
                               <Insets bottom="10.0" />
@@ -50,13 +55,15 @@
                           <content>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="234.0" prefWidth="568.0">
                                  <children>
-                                    <TableView fx:id="table" prefHeight="234.0" prefWidth="568.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <TableView fx:id="tableView" prefHeight="234.0" prefWidth="568.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columns>
-                                        <TableColumn minWidth="0.0" prefWidth="132.0" text="ID" />
-                                        <TableColumn minWidth="0.0" prefWidth="140.0" text="Nome Vendedor" />
-                                          <TableColumn prefWidth="140.0" text="Data Pedido" />
-                                          <TableColumn minWidth="0.0" prefWidth="140.0" text="Horário Pedido" />
+                                        <TableColumn fx:id="colunaID" minWidth="0.0" prefWidth="132.0" text="ID" />
+                                        <TableColumn fx:id="colunaNomeVendedor" minWidth="0.0" prefWidth="140.0" text="Nome Vendedor" />
+                                          <TableColumn fx:id="colunaData" prefWidth="140.0" text="Data Pedido" />
                                       </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
                                     </TableView>
                                  </children>
                               </AnchorPane>
@@ -64,12 +71,12 @@
                         </ScrollPane>
                      </children>
                   </AnchorPane>
-                  <MenuBar layoutX="-2.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+                  <MenuBar prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                      <menus>
                         <Menu fx:id="menuHome" mnemonicParsing="false" onAction="#menu_home" style="-fx-text-fill: rgba(0, 0, 0, 1); -fx-font-weight: bold; -fx-font-size: 13;" text="Home" />
                      </menus>
                   </MenuBar>
-                  <MenuBar layoutX="423.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
+                  <MenuBar layoutX="425.0" prefHeight="35.0" style="-fx-background-color: rgba(173, 188, 242, 1);">
                      <menus>
                         <Menu fx:id="menuCarrinho" mnemonicParsing="false" onAction="#menu_carrinho" style="-fx-text-fill: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Carrinho" />
                         <Menu fx:id="menuUser" mnemonicParsing="false" onAction="#menu_user" style="-fx-text-fill: rgba(30, 84, 225, 1); -fx-font-weight: bold;" text="Usuario">
